[project]
name = "warehouse"
version = "1.0.0"
description = "pypi warehouse"
readme = "README.rst"
requires-python = ">=3.13.12"

[tool.coverage.run]
branch = true
dynamic_context = "test_function"
source = ["warehouse", "tests"]
omit = [
  # We don't want to get coverage information for our migrations.
  "warehouse/migrations/*",

  # We don't want to actually cover our __main__.py file because it is hard
  # to cover and it really just acts as a tiny shim to a function.
  "warehouse/__main__.py",

  # Again, tiny shim code that we don't actually need to test and trying to
  # do so would just get in the way.
  "warehouse/wsgi.py",

  # And again, tiny shim code.
  "warehouse/celery.py",
]
# We run multiple processes in parallel, so we need to make sure that we don't
# write to the same file at the same time.
parallel = true

[tool.coverage.report]
exclude_also = [
  "class \\w+\\(Interface\\):",
  "if (typing\\.)?TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "pytest.fail\\(",  # Use for test branches that should never be reached.
  # Remove once resolved: https://github.com/nedbat/coveragepy/issues/1563
  "case _:\\n\\s*pytest\\.fail\\(",
]

[tool.djlint]
# https://www.djlint.com/docs/configuration/
indent = 2
profile = "jinja"
use_gitignore = true
# The Simple API templates have structures that are relied upon.
extend_exclude = "warehouse/templates/api/simple/*"
# TODO: Evaluate which `img` tags can get height/width attributes and remove H006.
# H006: <img> tag should have `height` and `width` attributes.
# TODO: Convert single quotes to double quotes and remove T002 from ignore.
# T002: Double quotes should be used in tags. Ex {% extends "this.html" %}
# TODO: Add endblock names everywhere and remove T003 from ignore.
# T003: Endblock should have name. Ex: {% endblock body %}.
# T028: Handled by warehouse config. See: https://github.com/pypi/warehouse/pull/14709
ignore = "H006,T002,T003,T028"

[tool.isort]
profile = 'black'
lines_between_types = 1
combine_as_imports = true
known_first_party = ['warehouse', 'tests']

[tool.mypy]
python_version = "3.13"
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
plugins = ["mypy_zope:plugin"]
exclude = ["warehouse/locale/.*", "warehouse/migrations/versions.*"]
cache_dir = "dev/.mypy_cache"

[[tool.mypy.overrides]]
# These modules do not yet have types available.
module = [
    "bpython.*",  # https://github.com/bpython/bpython/issues/892
    "b2sdk.*",  # https://github.com/Backblaze/b2-sdk-python/issues/148
    "celery.app.backends.*",  # https://github.com/celery/celery/issues/7394
    "celery.backends.redis.*",  # https://github.com/celery/celery/issues/7394
    "cgi.*",  # legacy stdlib module for webob, installed via `legacy_cgi` package
    "google.cloud.storage.*",  # https://github.com/googleapis/python-storage/issues/393
    "forcediphttpsadapter.*",
    "IPython.*",  # has types, but only installed in dev
    "packaging_legacy.*",  # https://github.com/di/packaging_legacy/pull/5
    "paginate.*",
    "paginate_sqlalchemy.*",
    "premailer.*",
    "pymacaroons.*", # https://github.com/ecordell/pymacaroons/issues/41
    "pyramid.*", # https://github.com/Pylons/pyramid/issues/2638
    "pyramid_jinja2.*",
    "pyramid_mailer.*",
    "pyramid_retry.*",
    "pyramid_rpc.*",
    "pyqrcode.*",
    "requests_aws4auth.*",  # https://github.com/tedder/requests-aws4auth/issues/53
    "rfc3986.*",  # https://github.com/python-hyper/rfc3986/issues/122
    "transaction.*",
    "venusian.*",
    "whitenoise.*",  # https://github.com/evansd/whitenoise/pull/410
    "zope.sqlalchemy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = [
  "--disable-socket",
  "--allow-hosts=localhost,::1,stripe,redis",
  "--durations=20",
  "--numprocesses=auto",
  # Disable ddtrace for tests
  "-p no:ddtrace",
  "-p no:ddtrace.pytest_bdd",
  "-p no:ddtrace.pytest_benchmark",
]
cache_dir = "dev/.pytest_cache"
testpaths = ["tests/"]
markers = [
    'unit: Quick running unit tests which test small units of functionality.',
    'functional: Slower running tests which test the entire system is functioning.',
]
filterwarnings = [
    'ignore::warehouse.utils.exceptions.DevelopmentModeWarning',
    'error:SELECT statement has a cartesian product:sqlalchemy.exc.SAWarning',

    # Noise reduction for warnings that are waiting for an upstream fix.
    # https://github.com/Pylons/pyramid/issues/3731
    'ignore:pkg_resources is deprecated as an API.*:UserWarning:pyramid.asset',
    # https://github.com/Pylons/webob/issues/473
    # https://github.com/Pylons/webob/pull/475
    'ignore:datetime\.datetime\.utcnow\(\) is deprecated.*:DeprecationWarning:webob.*',
    # https://github.com/Pylons/webob/issues/387
    'ignore:The behavior of .*best_match.*:DeprecationWarning:webob.*',
    # https://github.com/pypi/warehouse/issues/15454#issuecomment-2599321232
    'ignore:Accessing argon2.__version__ is deprecated.*:DeprecationWarning:passlib.handlers.argon2',
    # https://github.com/zopefoundation/meta/issues/194
    '''ignore:Deprecated call to `pkg_resources.declare_namespace\('(paste|repoze)'\).*:DeprecationWarning:pkg_resources''',
]

[tool.pip-tools.compile]
# TODO: This can be removed once it becomes the default.
# See: https://github.com/jazzband/pip-tools/issues/989
allow-unsafe = true

[dependency-groups]
deploy = [
    "ddtrace==4.6.2",
    "gunicorn<24.0.0",
]
dev = [
    "asyncudp>=0.7",
    "hupper>=1.9",
    "pip-api>=0.0.34",
    "pip-tools>=1.0",
    "pyramid-debugtoolbar>=2.5",
    "watchdog>=6.0.0",
]
docs-blog = [
    "cairosvg>=2.9.0",
    "material-plausible-plugin>=0.3.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocs-rss-plugin>=1.17.9",
    "pillow>=12.2.0",
]
docs-dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocs-redirects>=1.2.3",
]
docs-user = [
    "material-plausible-plugin>=0.3.0",
    "mkdocs>=1.6.1",
    "mkdocs-macros-plugin>=1.5.0",
    "mkdocs-material>=9.7.6",
]
lint = [
    "black==26.3.1",
    "boto3-stubs>=1.42.83",
    "celery-types>=0.26.0",
    "djlint>=1.36.4",
    "flake8>=7.3.0",
    "flake8-pytest-style>=2.2.0",
    "isort>=5.13.1",
    "msgpack-types>=0.7.0",
    "mypy>=1.19.1",
    "mypy-zope>=1.0.14",
    "pep8-naming>=0.15.1",
    "pyupgrade>=3.21.2",
    "sphinx-lint>=1.0.2",
    "types-babel>=2.11.0.15",
    "types-certifi>=2021.10.8.3",
    "types-first>=2.0.5.20240806",
    "types-html5lib>=1.1.11.20260402",
    "types-itsdangerous>=1.1.6",
    "types-passlib>=1.7.7.20260211",
    "types-python-slugify>=8.0.2.20240310",
    "types-pytz>=2026.1.1.20260402",
    "types-redis>=4.6.0.20241004",
    "types-requests==2.32.4.20260324",
    "types-stripe>=3.5.2.20240106",
    "types-webob>=1.8.0.20260402",
    "types-wtforms>=3.2.1.20260402",
    "types-zxcvbn>=4.5.0.20250809",
]
main = [
    "alembic>=0.7.0",
    "alembic-postgresql-enum>=1.10.0",
    "argon2-cffi>=25.1.0",
    "automat>=25.4.16",
    "b2sdk>=2.10.4",
    "babel>=2.18.0",
    "bcrypt>=5.0.0",
    "boto3>=1.42.83",
    "celery-redbeat>=2.3.3",
    "celery[redis]>=5.6.2,<5.7",
    "certifi>=2026.2.25",
    "click>=8.3.2",
    "cryptography>=43.0.1",
    "datadog>=0.19.0",
    "disposable-email-domains>=0.0.169",
    "dnspython>=2.8.0",
    "email-validator>=2.3.0",
    "forcediphttpsadapter>=1.1.0",
    "github-reserved-names>=1.0.0",
    "google-cloud-bigquery>=3.41.0",
    "google-cloud-storage>=3.10.1",
    "hiredis>=3.3.1",
    "html5lib>=1.1",
    "humanize>=4.15.0",
    "itsdangerous>=2.2.0",
    "jinja2>=2.8",
    "kombu[redis]>=5.6,<5.7",
    "limits>=5.8.0",
    "linehaul>=1.0.3",
    "lxml>=6.0.2",
    "more-itertools>=11.0.1",
    "msgpack>=1.1.2",
    "natsort>=8.4.0",
    "nh3>=0.3.4",
    "opensearch-py>=3.1.0",
    "orjson>=3.11.8",
    "packaging>=24.2",
    "packaging-legacy>=23.0.post0",
    "paginate>=0.5.2",
    "paginate-sqlalchemy>=0.3.1",
    "passlib>=1.6.4",
    "platformdirs>=4.2",
    "premailer>=3.10.0",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "pyjwt[crypto]>=2.8.0",
    "pymacaroons>=0.13.0",
    "pypi-attestations==0.0.29",
    "pyqrcode-binary>=1.2.1",
    "pyramid>=2.0",
    "pyramid-jinja2>=2.5",
    "pyramid-mailer>=0.14.1",
    "pyramid-openapi3>=0.17.1",
    "pyramid-redirect>=0.4",
    "pyramid-retry>=0.3",
    "pyramid-rpc>=0.7",
    "pyramid-services>=2.1",
    "pyramid-tm>=0.12",
    "python-slugify>=8.0.4",
    "pytz>=2026.1.post1",
    "readme-renderer[md]>=36.0",
    "redis>=2.8.0,<7.0.0",
    "requests>=2.33.1",
    "requests-aws4auth>=1.3.1",
    "rfc3986>=2.0.0",
    "sentry-sdk>=2.57.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "stdlib-list>=0.12.0",
    "stripe>=15.0.1",
    "structlog>=25.5.0",
    "tldextract>=5.3.1",
    "transaction>=5.1",
    "trove-classifiers>=2026.1.14.14",
    "ua-parser>=1.0.2",
    "urllib3>=2.6.3",
    "webauthn>=1.0.0,<3.0.0",
    "whitenoise>=6.12.0",
    "wtforms[email]>=2.0.0",
    "yara-x>=1.14.0",
    "zope-sqlalchemy>=4.1",
    "zxcvbn>=4.5.0",
]
tests = [
    "coverage>=7.13.5",
    "factory-boy>=3.3.3",
    "freezegun>=1.5.5",
    "pretend>=1.0.9",
    "pytest>=3.0.0",
    "pytest-icdiff>=0.9",
    "pytest-mock>=3.15.1",
    "pytest-postgresql>=3.1.3,<9.0.0",
    "pytest-randomly>=4.0.1",
    "pytest-socket>=0.7.0",
    "pytest-sugar>=1.1.1",
    "pytest-xdist>=3.8.0",
    "pytz>=2026.1.post1",
    "responses>=0.5.1",
    "webtest>=3.0.7",
]
