[project]
name = "warehouse"
version = "0.0.0"
description = "PyPI's web application"
requires-python = ">=3.13"
dependencies = [
    "alembic>=0.7.0",
    "alembic-postgresql-enum",
    "Automat",
    "argon2-cffi",
    "b2sdk",
    "Babel",
    "bcrypt",
    "boto3",
    "celery[redis]>=5.6.2,<5.7",
    "celery-redbeat",
    "certifi",
    "click",
    "cryptography>=43.0.1",
    "datadog>=0.19.0",
    "disposable-email-domains",
    "dnspython",
    "email-validator",
    "forcediphttpsadapter",
    "github-reserved-names>=1.0.0",
    "google-cloud-bigquery",
    "google-cloud-storage",
    "hiredis",
    "html5lib",
    "humanize",
    "itsdangerous",
    "Jinja2>=2.8",
    # https://github.com/jazzband/pip-tools/issues/1577
    "kombu[redis]>=5.6,<5.7",
    "limits",
    "linehaul",
    "lxml",
    "more-itertools",
    "msgpack",
    "natsort",
    "nh3",
    "opensearch-py",
    "orjson",
    "packaging>=26.1",
    "packaging_legacy",
    "paginate>=0.5.2",
    "paginate_sqlalchemy",
    "passlib>=1.6.4",
    "platformdirs>=4.2",
    "premailer",
    "psycopg[binary]",
    "pydantic",
    "pyqrcode-binary",
    "pyramid>=2.0",
    "pymacaroons",
    "pyramid_jinja2>=2.5",
    "pyramid_mailer>=0.14.1",
    "pyramid_openapi3>=0.17.1",
    "pyramid_redirect>=0.4",
    "pyramid_retry>=0.3",
    "pyramid_rpc>=0.7",
    "pyramid_services>=2.1",
    "pyramid_tm>=0.12",
    "python-slugify",
    "pytz",
    "PyJWT[crypto]>=2.8.0",
    "readme-renderer[md]>=36.0",
    "requests",
    "requests-aws4auth",
    "redis>=2.8.0,<7.0.0",
    "rfc3986",
    "sentry-sdk",
    "pypi-attestations==0.0.29",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "stdlib-list",
    "stripe",
    "structlog",
    "tldextract",
    "transaction",
    "trove-classifiers",
    "ua-parser",
    "urllib3",
    "webauthn>=1.0.0,<3.0.0",
    "whitenoise",
    "WTForms[email]>=2.0.0",
    "yara-x",
    "zope.sqlalchemy",
    "zxcvbn",
]

[dependency-groups]
deploy = [
    "gunicorn<24.0.0",  # pin to below 24 to avoid a restart error
    "ddtrace==4.7.0",
]
dev = [
    "asyncudp>=0.7",
    "hupper>=1.9",
    "pyramid_debugtoolbar>=2.5",
    "watchdog",
]
ipython = ["ipython>=9.12.0"]
lint = [
    "ruff==0.15.12",
    "djlint",
    "flake8",
    "mypy",
    "celery-types",
    "msgpack-types",
    "mypy-zope",
    "sphinx-lint",
    "types-babel",
    "boto3-stubs",
    "types-certifi",
    "types-first",
    "types-html5lib",
    "types-itsdangerous",
    "types-passlib",
    "types-python-slugify",
    "types-pytz",
    "types-redis",
    "types-requests==2.33.0.20260408",
    "types-stripe",
    "types-WTForms",
    "types-WebOb",
    "types-zxcvbn",
]
tests = [
    "coverage",
    "factory_boy",
    "freezegun",
    "pretend",
    "pytest>=3.0.0",
    "pytest-icdiff",
    "pytest-mock",
    "pytest-postgresql>=3.1.3,<9.0.0",
    "pytest-randomly",
    "pytest-socket",
    "pytest-sugar",
    "pytest-xdist",
    "pytz",
    "responses>=0.5.1",
    "webtest",
]
docs-dev = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-redirects",
]
docs-user = [
    "material-plausible-plugin",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-macros-plugin",
]
docs-blog = [
    "material-plausible-plugin",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-rss-plugin",
    "pillow",
    "cairosvg",
]

[tool.uv]
package = false

[tool.coverage.run]
branch = true
dynamic_context = "test_function"
source = ["warehouse", "tests"]
omit = [
  # We don't want to get coverage information for our migrations.
  "warehouse/migrations/*",

  # We don't want to actually cover our __main__.py file because it is hard
  # to cover and it really just acts as a tiny shim to a function.
  "warehouse/__main__.py",

  # Again, tiny shim code that we don't actually need to test and trying to
  # do so would just get in the way.
  "warehouse/wsgi.py",

  # And again, tiny shim code.
  "warehouse/celery.py",
]
# We run multiple processes in parallel, so we need to make sure that we don't
# write to the same file at the same time.
parallel = true

[tool.coverage.report]
exclude_also = [
  "class \\w+\\(Interface\\):",
  "if (typing\\.)?TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "pytest.fail\\(",  # Use for test branches that should never be reached.
  # Remove once resolved: https://github.com/nedbat/coveragepy/issues/1563
  "case _:\\n\\s*pytest\\.fail\\(",
]

[tool.djlint]
# https://www.djlint.com/docs/configuration/
indent = 2
profile = "jinja"
use_gitignore = true
# The Simple API templates have structures that are relied upon.
extend_exclude = "warehouse/templates/api/simple/*"
# TODO: Evaluate which `img` tags can get height/width attributes and remove H006.
# H006: <img> tag should have `height` and `width` attributes.
# TODO: Convert single quotes to double quotes and remove T002 from ignore.
# T002: Double quotes should be used in tags. Ex {% extends "this.html" %}
# TODO: Add endblock names everywhere and remove T003 from ignore.
# T003: Endblock should have name. Ex: {% endblock body %}.
# T028: Handled by warehouse config. See: https://github.com/pypi/warehouse/pull/14709
ignore = "H006,T002,T003,T028"

[tool.mypy]
python_version = "3.13"
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
plugins = ["mypy_zope:plugin"]
exclude = ["warehouse/locale/.*", "warehouse/migrations/versions.*"]
cache_dir = "dev/.mypy_cache"

[[tool.mypy.overrides]]
# These modules do not yet have types available.
module = [
    "bpython.*",  # https://github.com/bpython/bpython/issues/892
    "b2sdk.*",  # https://github.com/Backblaze/b2-sdk-python/issues/148
    "celery.app.backends.*",  # https://github.com/celery/celery/issues/7394
    "celery.backends.redis.*",  # https://github.com/celery/celery/issues/7394
    "cgi.*",  # legacy stdlib module for webob, installed via `legacy_cgi` package
    "google.cloud.storage.*",  # https://github.com/googleapis/python-storage/issues/393
    "forcediphttpsadapter.*",
    "IPython.*",  # has types, but only installed in dev
    "packaging_legacy.*",  # https://github.com/di/packaging_legacy/pull/5
    "paginate.*",
    "paginate_sqlalchemy.*",
    "premailer.*",
    "pymacaroons.*", # https://github.com/ecordell/pymacaroons/issues/41
    "pyramid.*", # https://github.com/Pylons/pyramid/issues/2638
    "pyramid_jinja2.*",
    "pyramid_mailer.*",
    "pyramid_retry.*",
    "pyramid_rpc.*",
    "pyqrcode.*",
    "requests_aws4auth.*",  # https://github.com/tedder/requests-aws4auth/issues/53
    "rfc3986.*",  # https://github.com/python-hyper/rfc3986/issues/122
    "transaction.*",
    "venusian.*",
    "whitenoise.*",  # https://github.com/evansd/whitenoise/pull/410
    "zope.sqlalchemy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = [
  "--disable-socket",
  "--allow-hosts=localhost,::1,stripe,redis",
  "--durations=20",
  "--numprocesses=auto",
  # Disable ddtrace for tests
  "-p no:ddtrace",
  "-p no:ddtrace.pytest_bdd",
  "-p no:ddtrace.pytest_benchmark",
]
cache_dir = "dev/.pytest_cache"
testpaths = ["tests/"]
markers = [
    'unit: Quick running unit tests which test small units of functionality.',
    'functional: Slower running tests which test the entire system is functioning.',
]
filterwarnings = [
    'ignore::warehouse.utils.exceptions.DevelopmentModeWarning',
    'error:SELECT statement has a cartesian product:sqlalchemy.exc.SAWarning',

    # Noise reduction for warnings that are waiting for an upstream fix.
    # https://github.com/Pylons/pyramid/issues/3731
    'ignore:pkg_resources is deprecated as an API.*:UserWarning:pyramid.asset',
    # https://github.com/Pylons/webob/issues/473
    # https://github.com/Pylons/webob/pull/475
    'ignore:datetime\.datetime\.utcnow\(\) is deprecated.*:DeprecationWarning:webob.*',
    # https://github.com/Pylons/webob/issues/387
    'ignore:The behavior of .*best_match.*:DeprecationWarning:webob.*',
    # https://github.com/pypi/warehouse/issues/15454#issuecomment-2599321232
    'ignore:Accessing argon2.__version__ is deprecated.*:DeprecationWarning:passlib.handlers.argon2',
    # https://github.com/zopefoundation/meta/issues/194
    '''ignore:Deprecated call to `pkg_resources.declare_namespace\('(paste|repoze)'\).*:DeprecationWarning:pkg_resources''',
]

[tool.ruff]
cache-dir = "dev/.ruff_cache"
target-version = "py313"

[tool.ruff.lint]
external = ["WH"]  # These come from our internal flake8 plugin.
select = [
  "E",  # pycodestyle rules; enforces coding style
  "W",  # pycodestyle rules; enforces coding style
  "F",  # pyflakes rules; finds coding errors
  "N",  # pep8-naming rules; enforces naming rules
  "Q",  # flake8-quotes; enforces quoting styles
  "ISC",  # flake8-implicit-str-concat; enforce rules around string concat
  "FLY",  # flynt; finds cases where "".join() was used instead of f""
  "I",  # isort; enforces rules around import grouping and sorting
  "TID",  # flake8-tidy-imports; enforces rules around how/what you can import
  "PT",  # flake8-pytest-style; catches issues with pytest tests
  "UP",  # pyupgrade; upgrade old patterns for new patterns in Python upgrades
  "T10",  # flake8-debugger; looks for erroneous debugger imports/uses
  "EXE",  # flake8-executable; looks for executable scripts and shebang issues
  "INT",  # flake8-gettest; issues passing dynamic strings into gettext
  "SLOT",  # flake8-slots; finds issues with classes that define __slots__
  "LOG",  # flake8-logging; enforce rules around good logging use
  "G",  # flake8-logging-format; enforce the use of % logging format strings
  "RSE",  # flake8-raise; remove extraneous parens on exception raises
  "RUF",  # ruff; grab bag of ruff specific linting rules
]
ignore = [
  # TODO(dstufft): These have too many hits to enable currently, but we could
  #                look at them at some point and try to enable them.
  "RUF001",
  "RUF002",
  "RUF003",
  "RUF005",
  "RUF012",
  "RUF015",
  "RUF043",
]

[tool.ruff.lint.per-file-ignores]
# N805: zope.interface definitions look like classes, but are not
"interfaces.py" = ["N805"]
# PT009: These files use a lot of custom assertion tools that trip up this detection.
"tests/unit/email/test_init.py" = ["PT009"]
"tests/unit/email/test_services.py" = ["PT009"]
"tests/unit/test_views.py" = ["PT009"]
# TID252: Pretty much all of our tests use relative imports.
"tests/**/*.py" = ["TID252"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-between-types = 1
# Even though `cgi` isn't a stdlib module anymore, treat it as one for now
extra-standard-library = ["cgi"]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = [
  # Allow SQLAlchemy's dynamic decorators, like `@field.expression`, to trigger class
  # method treatment.
  "declared_attr",
  "expression",
  "comparator",
]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"urllib.parse.urlparse".msg = "Prefer `urllib3.util.parse_url` over `urllib.parse.urlparse`"
