[project]
name = "warehouse"
version = "0.0.0"
description = "PyPI's web application"
requires-python = ">=3.13"
dependencies = [
    "alembic>=0.7.0",
    "alembic-postgresql-enum",
    "Automat",
    "argon2-cffi",
    "b2sdk",
    "Babel",
    "bcrypt",
    "boto3",
    "celery[redis]>=5.6.2,<5.7",
    "celery-redbeat",
    "certifi",
    "click",
    "cryptography>=43.0.1",
    "datadog>=0.19.0",
    "disposable-email-domains",
    "dnspython",
    "email-validator",
    "forcediphttpsadapter",
    "github-reserved-names>=1.0.0",
    "google-cloud-bigquery",
    "google-cloud-storage",
    "hiredis",
    "html5lib",
    "humanize",
    "itsdangerous",
    "Jinja2>=2.8",
    # https://github.com/jazzband/pip-tools/issues/1577
    "kombu[redis]>=5.6,<5.7",
    "limits",
    "linehaul",
    "lxml",
    "more-itertools",
    "msgpack",
    "natsort",
    "nh3",
    "opensearch-py",
    "orjson",
    "packaging>=26.1",
    "packaging_legacy",
    "paginate>=0.5.2",
    "paginate_sqlalchemy",
    "passlib>=1.6.4",
    "platformdirs>=4.2",
    "premailer",
    "psycopg[binary]",
    "pydantic",
    "pyqrcode-binary",
    "pyramid>=2.0",
    "pymacaroons",
    "pyramid_jinja2>=2.5",
    "pyramid_mailer>=0.14.1",
    "pyramid_openapi3>=0.17.1",
    "pyramid_redirect>=0.4",
    "pyramid_retry>=0.3",
    "pyramid_rpc>=0.7",
    "pyramid_services>=2.1",
    "pyramid_tm>=0.12",
    "python-slugify",
    "pytz",
    "PyJWT[crypto]>=2.8.0",
    "readme-renderer[md]>=36.0",
    "requests",
    "requests-aws4auth",
    "redis>=2.8.0,<7.0.0",
    "rfc3986",
    "sentry-sdk",
    "pypi-attestations==0.0.29",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "stdlib-list",
    "stripe",
    "structlog",
    "tldextract",
    "transaction",
    "trove-classifiers",
    "ua-parser",
    "urllib3",
    "webauthn>=1.0.0,<3.0.0",
    "whitenoise",
    "WTForms[email]>=2.0.0",
    "yara-x",
    "zope.sqlalchemy",
    "zxcvbn",
]

[dependency-groups]
deploy = [
    "gunicorn<24.0.0",  # pin to below 24 to avoid a restart error
    "ddtrace==4.7.0",
]
dev = [
    "asyncudp>=0.7",
    "hupper>=1.9",
    "pyramid_debugtoolbar>=2.5",
    "watchdog",
]
ipython = ["ipython>=9.12.0"]
lint = [
    "ruff==0.15.12",
    "djlint",
    "flake8",
    "mypy",
    "celery-types",
    "msgpack-types",
    "mypy-zope",
    "sphinx-lint",
    "types-babel",
    "boto3-stubs",
    "types-certifi",
    "types-first",
    "types-html5lib",
    "types-itsdangerous",
    "types-passlib",
    "types-python-slugify",
    "types-pytz",
    "types-redis",
    "types-requests==2.33.0.20260408",
    "types-stripe",
    "types-WTForms",
    "types-WebOb",
    "types-zxcvbn",
]
tests = [
    "coverage",
    "factory_boy",
    "freezegun",
    "pretend",
    "pytest>=3.0.0",
    "pytest-icdiff",
    "pytest-mock",
    "pytest-postgresql>=3.1.3,<9.0.0",
    "pytest-randomly",
    "pytest-socket",
    "pytest-sugar",
    "pytest-xdist",
    "pytz",
    "responses>=0.5.1",
    "webtest",
]
docs-dev = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-redirects",
]
docs-user = [
    "material-plausible-plugin",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-macros-plugin",
]
docs-blog = [
    "material-plausible-plugin",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-rss-plugin",
    "pillow",
    "cairosvg",
]

[tool.uv]
package = false
# Scope the lock to linux only; we deploy on linux (Docker) and the previous
# requirements/*.txt files were single-platform too. Cross-platform locking
# can be enabled later but currently surfaces win32 marker conflicts that
# were silently ignored by pip-compile.
environments = ["sys_platform == 'linux'"]
# Constrain all transitive deps to the versions pinned by the pre-migration
# requirements/*.txt files. The migration to pyproject.toml + uv.lock should
# not silently bump versions; future upgrades happen via deliberate PRs that
# remove a constraint and re-lock.
constraint-dependencies = [
    "alembic==1.18.4",
    "alembic-postgresql-enum==1.10.0",
    "amqp==5.3.1",
    "annotated-types==0.7.0",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "asyncudp==0.11.0",
    "attrs==26.1.0",
    "automat==25.4.16",
    "b2sdk==2.10.4",
    "babel==2.18.0",
    "backrefs==6.2",
    "bcrypt==4.3.0",
    "beautifulsoup4==4.14.3",
    "billiard==4.2.4",
    "boto3==1.42.29",
    "boto3-stubs==1.42.29",
    "botocore==1.42.29",
    "botocore-stubs==1.42.29",
    "build==1.4.3",
    "bytecode==0.17.0",
    "cachecontrol==0.14.4",
    "cachetools==7.0.5",
    "cairocffi==1.7.1",
    "cairosvg==2.9.0",
    "cattrs==26.1.0",
    "cbor2==5.9.0",
    "celery==5.6.3",
    "celery-redbeat==2.3.3",
    "celery-types==0.26.0",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "click==8.3.2",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1.2",
    "click-repl==0.3.0",
    "cmarkgfm==2025.10.22",
    "colorama==0.4.6",
    "coverage==7.13.1",
    "cryptography==46.0.7",
    "cssbeautifier==1.15.4",
    "cssselect==1.4.0",
    "cssselect2==0.9.0",
    "cssutils==2.11.1",
    "datadog==0.52.1",
    "ddtrace==4.7.0",
    "defusedxml==0.7.1",
    "deprecated==1.3.1",
    "disposable-email-domains==0.0.172",
    "djlint==1.36.4",
    "dnspython==2.8.0",
    "docutils==0.22.4",
    "editorconfig==0.17.1",
    "email-validator==2.3.0",
    "envier==0.6.1",
    "events==0.5",
    "execnet==2.1.2",
    "factory-boy==3.3.3",
    "faker==40.13.0",
    "filelock==3.28.0",
    "flake8==7.3.0",
    "forcediphttpsadapter==1.1.0",
    "freezegun==1.5.5",
    "ghp-import==2.1.0",
    "gitdb==4.0.12",
    "github-reserved-names==2026.3.1",
    "gitpython==3.1.46",
    "google-api-core==2.30.3",
    "google-auth==2.49.2",
    "google-cloud-bigquery==3.41.0",
    "google-cloud-core==2.5.1",
    "google-cloud-storage==3.10.1",
    "google-crc32c==1.8.0",
    "google-resumable-media==2.8.2",
    "googleapis-common-protos==1.74.0",
    "greenlet==3.4.0",
    "grpcio==1.80.0",
    "grpcio-status==1.80.0",
    "gunicorn==23.0.0",
    "hiredis==3.3.1",
    "hjson==3.1.0",
    "html5lib==1.1",
    "humanize==4.15.0",
    "hupper==1.12.1",
    "icdiff==2.0.10",
    "id==1.6.1",
    "idna==3.11",
    "importlib-metadata==8.7.1",
    "iniconfig==2.3.0",
    "isodate==0.7.2",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "jmespath==1.1.0",
    "jsbeautifier==1.15.4",
    "json5==0.14.0",
    "jsonschema==4.26.0",
    "jsonschema-path==0.3.4",
    "jsonschema-specifications==2025.9.1",
    "kombu==5.6.2",
    "lazy-object-proxy==1.12.0",
    "legacy-cgi==2.6.4",
    "librt==0.9.0",
    "limits==5.8.0",
    "linehaul==1.0.3",
    "logfury==1.0.1",
    "lxml==6.1.0",
    "mako==1.3.11",
    "markdown==3.10.2",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "material-plausible-plugin==0.3.0",
    "mccabe==0.7.0",
    "mdurl==0.1.2",
    "mergedeep==1.3.4",
    "mirakuru==3.0.2",
    "mkdocs==1.6.1",
    "mkdocs-get-deps==0.2.2",
    "mkdocs-macros-plugin==1.5.0",
    "mkdocs-material==9.7.6",
    "mkdocs-material-extensions==1.3.1",
    "mkdocs-redirects==1.2.3",
    "mkdocs-rss-plugin==1.17.9",
    "more-itertools==11.0.2",
    "msgpack==1.1.2",
    "msgpack-types==0.7.0",
    "mypy==1.19.1",
    "mypy-extensions==1.1.0",
    "mypy-zope==1.0.14",
    "natsort==8.4.0",
    "nh3==0.3.4",
    "openapi-core==0.22.0",
    "openapi-schema-validator==0.6.3",
    "openapi-spec-validator==0.7.2",
    "opensearch-protobufs==0.19.0",
    "opensearch-py==3.1.0",
    "opentelemetry-api==1.41.0",
    "orjson==3.11.8",
    "packaging==26.1",
    "packaging-legacy==23.0.post0",
    "paginate==0.5.7",
    "paginate-sqlalchemy==0.3.1",
    "passlib==1.7.4",
    "pastedeploy==3.1.0",
    "pathable==0.4.4",
    "pathspec==1.0.4",
    "pillow==12.2.0",
    "pip==26.0.1",
    "pip-api==0.0.34",
    "pip-tools==7.5.3",
    "plaster==1.1.2",
    "plaster-pastedeploy==1.0.1",
    "platformdirs==4.9.6",
    "pluggy==1.6.0",
    "polib==1.2.0",
    "port-for==1.0.0",
    "pprintpp==0.4.0",
    "premailer==3.10.0",
    "pretend==1.0.9",
    "prompt-toolkit==3.0.52",
    "properdocs==1.6.7",
    "proto-plus==1.27.2",
    "protobuf==6.33.6",
    "psutil==7.2.2",
    "psycopg==3.3.3",
    "psycopg-binary==3.3.3",
    "pyasn1==0.6.3",
    "pyasn1-modules==0.4.2",
    "pycodestyle==2.14.0",
    "pycparser==3.0",
    "pydantic==2.13.0",
    "pydantic-core==2.46.0",
    "pyflakes==3.4.0",
    "pygments==2.20.0",
    "pyjwt==2.12.1",
    "pymacaroons==0.13.0",
    "pymdown-extensions==10.21.2",
    "pynacl==1.6.2",
    "pyopenssl==26.0.0",
    "pyparsing==3.3.2",
    "pypi-attestations==0.0.29",
    "pyproject-hooks==1.2.0",
    "pyqrcode-binary==1.2.1",
    "pyramid==2.1",
    "pyramid-debugtoolbar==4.12.1",
    "pyramid-jinja2==2.10.1",
    "pyramid-mailer==0.15.1",
    "pyramid-mako==1.1.0",
    "pyramid-openapi3==0.21.0",
    "pyramid-redirect==0.4",
    "pyramid-retry==2.1.1",
    "pyramid-rpc==0.8",
    "pyramid-services==2.2",
    "pyramid-tm==2.6",
    "pytest==9.0.3",
    "pytest-icdiff==0.9",
    "pytest-mock==3.15.1",
    "pytest-postgresql==8.0.0",
    "pytest-randomly==4.0.1",
    "pytest-socket==0.7.0",
    "pytest-sugar==1.1.1",
    "pytest-xdist==3.8.0",
    "python-dateutil==2.9.0.post0",
    "python-slugify==8.0.4",
    "pytz==2026.1.post1",
    "pyyaml==6.0.3",
    "pyyaml-env-tag==1.1",
    "readme-renderer==44.0",
    "redis==6.4.0",
    "referencing==0.36.2",
    "regex==2026.4.4",
    "repoze-sendmail==4.4.1",
    "requests==2.33.1",
    "requests-aws4auth==1.3.1",
    "requests-file==3.0.1",
    "responses==0.26.0",
    "rfc3161-client==1.0.6",
    "rfc3339-validator==0.1.4",
    "rfc3986==2.0.0",
    "rfc8785==0.1.4",
    "rich==14.3.4",
    "rpds-py==0.30.0",
    "ruff==0.15.12",
    "s3transfer==0.16.0",
    "securesystemslib==1.3.1",
    "sentry-sdk==2.58.0",
    "setuptools==80.10.2",
    "sigstore==4.2.0",
    "sigstore-models==0.0.6",
    "sigstore-rekor-types==0.0.18",
    "six==1.17.0",
    "smmap==5.0.3",
    "soupsieve==2.8.3",
    "sphinx-lint==1.0.2",
    "sqlalchemy==2.0.49",
    "stdlib-list==0.12.0",
    "stripe==11.6.0",
    "structlog==25.5.0",
    "super-collections==0.6.2",
    "tenacity==9.1.4",
    "termcolor==3.3.0",
    "text-unidecode==1.3",
    "tinycss2==1.5.1",
    "tldextract==5.3.1",
    "tqdm==4.67.3",
    "transaction==5.1",
    "translationstring==1.4",
    "trove-classifiers==2026.1.14.14",
    "tuf==6.0.0",
    "types-awscrt==0.31.3",
    "types-babel==2.11.0.15",
    "types-certifi==2021.10.8.3",
    "types-cffi==2.0.0.20260408",
    "types-first==2.0.5.20260408",
    "types-html5lib==1.1.11.20260408",
    "types-itsdangerous==1.1.6",
    "types-passlib==1.7.7.20260211",
    "types-pyopenssl==24.1.0.20240722",
    "types-python-slugify==8.0.2.20240310",
    "types-pytz==2026.1.1.20260408",
    "types-redis==4.6.0.20241004",
    "types-requests==2.33.0.20260408",
    "types-s3transfer==0.16.0",
    "types-setuptools==82.0.0.20260408",
    "types-stripe==3.5.2.20240106",
    "types-webencodings==0.5.0.20260408",
    "types-webob==1.8.0.20260408",
    "types-wtforms==3.2.1.20260408",
    "types-zxcvbn==4.5.0.20260408",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2026.1",
    "tzlocal==5.3.1",
    "ua-parser==1.0.2",
    "ua-parser-builtins==202603",
    "urllib3==2.6.3",
    "venusian==3.1.1",
    "vine==5.1.0",
    "waitress==3.0.2",
    "watchdog==6.0.0",
    "wcwidth==0.6.0",
    "webauthn==2.7.1",
    "webencodings==0.5.1",
    "webob==1.8.9",
    "webtest==3.0.7",
    "werkzeug==3.1.8",
    "wheel==0.46.3",
    "whitenoise==6.12.0",
    "wired==0.4",
    "wrapt==2.1.2",
    "wtforms==3.2.1",
    "yara-x==1.15.0",
    "zipp==3.23.1",
    "zope-deprecation==6.0",
    "zope-event==6.1",
    "zope-interface==8.3",
    "zope-schema==8.1",
    "zope-sqlalchemy==4.1",
    "zxcvbn==4.5.0",
]

[tool.coverage.run]
branch = true
dynamic_context = "test_function"
source = ["warehouse", "tests"]
omit = [
  # We don't want to get coverage information for our migrations.
  "warehouse/migrations/*",

  # We don't want to actually cover our __main__.py file because it is hard
  # to cover and it really just acts as a tiny shim to a function.
  "warehouse/__main__.py",

  # Again, tiny shim code that we don't actually need to test and trying to
  # do so would just get in the way.
  "warehouse/wsgi.py",

  # And again, tiny shim code.
  "warehouse/celery.py",
]
# We run multiple processes in parallel, so we need to make sure that we don't
# write to the same file at the same time.
parallel = true

[tool.coverage.report]
exclude_also = [
  "class \\w+\\(Interface\\):",
  "if (typing\\.)?TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "pytest.fail\\(",  # Use for test branches that should never be reached.
  # Remove once resolved: https://github.com/nedbat/coveragepy/issues/1563
  "case _:\\n\\s*pytest\\.fail\\(",
]

[tool.djlint]
# https://www.djlint.com/docs/configuration/
indent = 2
profile = "jinja"
use_gitignore = true
# The Simple API templates have structures that are relied upon.
extend_exclude = "warehouse/templates/api/simple/*"
# TODO: Evaluate which `img` tags can get height/width attributes and remove H006.
# H006: <img> tag should have `height` and `width` attributes.
# TODO: Convert single quotes to double quotes and remove T002 from ignore.
# T002: Double quotes should be used in tags. Ex {% extends "this.html" %}
# TODO: Add endblock names everywhere and remove T003 from ignore.
# T003: Endblock should have name. Ex: {% endblock body %}.
# T028: Handled by warehouse config. See: https://github.com/pypi/warehouse/pull/14709
ignore = "H006,T002,T003,T028"

[tool.mypy]
python_version = "3.13"
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
plugins = ["mypy_zope:plugin"]
exclude = ["warehouse/locale/.*", "warehouse/migrations/versions.*"]
cache_dir = "dev/.mypy_cache"

[[tool.mypy.overrides]]
# These modules do not yet have types available.
module = [
    "bpython.*",  # https://github.com/bpython/bpython/issues/892
    "b2sdk.*",  # https://github.com/Backblaze/b2-sdk-python/issues/148
    "celery.app.backends.*",  # https://github.com/celery/celery/issues/7394
    "celery.backends.redis.*",  # https://github.com/celery/celery/issues/7394
    "cgi.*",  # legacy stdlib module for webob, installed via `legacy_cgi` package
    "google.cloud.storage.*",  # https://github.com/googleapis/python-storage/issues/393
    "forcediphttpsadapter.*",
    "IPython.*",  # has types, but only installed in dev
    "packaging_legacy.*",  # https://github.com/di/packaging_legacy/pull/5
    "paginate.*",
    "paginate_sqlalchemy.*",
    "premailer.*",
    "pymacaroons.*", # https://github.com/ecordell/pymacaroons/issues/41
    "pyramid.*", # https://github.com/Pylons/pyramid/issues/2638
    "pyramid_jinja2.*",
    "pyramid_mailer.*",
    "pyramid_retry.*",
    "pyramid_rpc.*",
    "pyqrcode.*",
    "requests_aws4auth.*",  # https://github.com/tedder/requests-aws4auth/issues/53
    "rfc3986.*",  # https://github.com/python-hyper/rfc3986/issues/122
    "transaction.*",
    "venusian.*",
    "whitenoise.*",  # https://github.com/evansd/whitenoise/pull/410
    "zope.sqlalchemy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = [
  "--disable-socket",
  "--allow-hosts=localhost,::1,stripe,redis",
  "--durations=20",
  "--numprocesses=auto",
  # Disable ddtrace for tests
  "-p no:ddtrace",
  "-p no:ddtrace.pytest_bdd",
  "-p no:ddtrace.pytest_benchmark",
]
cache_dir = "dev/.pytest_cache"
testpaths = ["tests/"]
markers = [
    'unit: Quick running unit tests which test small units of functionality.',
    'functional: Slower running tests which test the entire system is functioning.',
]
filterwarnings = [
    'ignore::warehouse.utils.exceptions.DevelopmentModeWarning',
    'error:SELECT statement has a cartesian product:sqlalchemy.exc.SAWarning',

    # Noise reduction for warnings that are waiting for an upstream fix.
    # https://github.com/Pylons/pyramid/issues/3731
    'ignore:pkg_resources is deprecated as an API.*:UserWarning:pyramid.asset',
    # https://github.com/Pylons/webob/issues/473
    # https://github.com/Pylons/webob/pull/475
    'ignore:datetime\.datetime\.utcnow\(\) is deprecated.*:DeprecationWarning:webob.*',
    # https://github.com/Pylons/webob/issues/387
    'ignore:The behavior of .*best_match.*:DeprecationWarning:webob.*',
    # https://github.com/pypi/warehouse/issues/15454#issuecomment-2599321232
    'ignore:Accessing argon2.__version__ is deprecated.*:DeprecationWarning:passlib.handlers.argon2',
    # https://github.com/zopefoundation/meta/issues/194
    '''ignore:Deprecated call to `pkg_resources.declare_namespace\('(paste|repoze)'\).*:DeprecationWarning:pkg_resources''',
]

[tool.ruff]
cache-dir = "dev/.ruff_cache"
target-version = "py313"

[tool.ruff.lint]
external = ["WH"]  # These come from our internal flake8 plugin.
select = [
  "E",  # pycodestyle rules; enforces coding style
  "W",  # pycodestyle rules; enforces coding style
  "F",  # pyflakes rules; finds coding errors
  "N",  # pep8-naming rules; enforces naming rules
  "Q",  # flake8-quotes; enforces quoting styles
  "ISC",  # flake8-implicit-str-concat; enforce rules around string concat
  "FLY",  # flynt; finds cases where "".join() was used instead of f""
  "I",  # isort; enforces rules around import grouping and sorting
  "TID",  # flake8-tidy-imports; enforces rules around how/what you can import
  "PT",  # flake8-pytest-style; catches issues with pytest tests
  "UP",  # pyupgrade; upgrade old patterns for new patterns in Python upgrades
  "T10",  # flake8-debugger; looks for erroneous debugger imports/uses
  "EXE",  # flake8-executable; looks for executable scripts and shebang issues
  "INT",  # flake8-gettest; issues passing dynamic strings into gettext
  "SLOT",  # flake8-slots; finds issues with classes that define __slots__
  "LOG",  # flake8-logging; enforce rules around good logging use
  "G",  # flake8-logging-format; enforce the use of % logging format strings
  "RSE",  # flake8-raise; remove extraneous parens on exception raises
  "RUF",  # ruff; grab bag of ruff specific linting rules
]
ignore = [
  # TODO(dstufft): These have too many hits to enable currently, but we could
  #                look at them at some point and try to enable them.
  "RUF001",
  "RUF002",
  "RUF003",
  "RUF005",
  "RUF012",
  "RUF015",
  "RUF043",
]

[tool.ruff.lint.per-file-ignores]
# N805: zope.interface definitions look like classes, but are not
"interfaces.py" = ["N805"]
# PT009: These files use a lot of custom assertion tools that trip up this detection.
"tests/unit/email/test_init.py" = ["PT009"]
"tests/unit/email/test_services.py" = ["PT009"]
"tests/unit/test_views.py" = ["PT009"]
# TID252: Pretty much all of our tests use relative imports.
"tests/**/*.py" = ["TID252"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-between-types = 1
# Even though `cgi` isn't a stdlib module anymore, treat it as one for now
extra-standard-library = ["cgi"]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = [
  # Allow SQLAlchemy's dynamic decorators, like `@field.expression`, to trigger class
  # method treatment.
  "declared_attr",
  "expression",
  "comparator",
]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"urllib.parse.urlparse".msg = "Prefer `urllib3.util.parse_url` over `urllib.parse.urlparse`"
