[wheel]
universal = 1

[check-manifest]
ignore =
    .travis.yml
    tasks.py

[metadata]
requires-dist =
    alembic
    arrow
    babel
    elasticsearch
    enum34
    guard
    html5lib
    Jinja2
    PyYAML
    raven
    readme>=0.2.0
    redis
    six
    SQLAlchemy
    sqlalchemy-citext>=1.2.0
    Werkzeug

    psycopg2; platform_python_implementation == 'CPython'
    psycopg2cffi; platform_python_implementation == 'PyPy'
