[wheel]
universal = 1

[check-manifest]
ignore =
    .travis.yml
    tasks.py
    Gruntfile.js

[metadata]
requires-dist =
    alembic
    arrow
    babel
    elasticsearch
    enum34
    guard
    html5lib
    Jinja2
    psycopg2
    PyYAML
    raven
    readme>=0.2.0
    redis
    SQLAlchemy
    sqlalchemy-citext>=1.2.0
    Werkzeug
    whitenoise>=0.12
